# xi-editor

rust/rope/src/: engine.rs
rust/trace-dump/: Cargo.toml
rust/trace-dump/src/: chrome_trace.rs  lib.rs
rust/trace-ffi/: Cargo.toml
rust/trace-ffi-examples/: Cargo.toml  build.rs
rust/trace-ffi-examples/src/: example.c
rust/trace-ffi/src/: lib.rs
rust/trace/src/: lib.rs
